2008-09-03 vs. 1.0.2 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>

	* Released to CRAN
	  
2008-08-01 vs. 1.0.1 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>

	* Fisrt version restricted released (to testers only)