@@ -1,3 +1,7 @@
+2009-02-08 vs. 1.0.3 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
+
+	* New function added: trStartIDE
+
 2008-09-03 vs. 1.0.2 - Jose Claudio Faria  <joseclaudio.faria@gmail.com>
 
 	* Released to CRAN
